DetailsView: Fix outline border not using the same corner radius as parent

--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -357,7 +357,6 @@
                                                     </StackPanel>
                                                 </DockPanel>
 
-                                                <Border/>
                                             </DockPanel>
                                         </Border>
                                     </Grid>
@@ -536,7 +535,9 @@
 
                                                     </DockPanel>
                                                 </Border>
-                                                <Border Style="{DynamicResource OutlineBorderSidePanelsBorder}" Margin="20,0,30,0" Padding="15,10,15,10" />
+                                                <Border Style="{DynamicResource OutlineBorderSidePanelsBorder}"
+                                                        CornerRadius="0"
+                                                        Margin="20,0,30,0" Padding="15,10,15,10" />
                                             </Grid>
                                         </Grid>
 
