--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -204,7 +204,7 @@
 
                                                 <DockPanel DockPanel.Dock="Right" VerticalAlignment="Center" Margin="20,0,0,0">
                                                     <Button x:Name="PART_ButtonEditGame" Focusable="False" Height="32" Width="32"
-                                                            FontFamily="{DynamicResource FontIcoFont}" Style="{DynamicResource GameEditButton}" Margin="0,0,0,0"/>
+                                                            Style="{DynamicResource GameEditButton}" Margin="0,0,0,0"/>
                                                     <ToggleButton Name="PanelToggleButton" Margin="10,0,0,0" Focusable="False" Height="32" Width="32" Style="{DynamicResource PannelToggleButton}" IsChecked="{DynamicResource DetailsViewShowInfoPanelDefault}"/>
                                                     <ToggleButton Name="GameFavoriteToggleButton" Margin="10,0,0,0" Focusable="False" Height="32" Width="32" Style="{DynamicResource PannelFavoriteToggleButton}"
                                                                   Visibility="{PluginStatus Plugin=felixkmh_Extras_Plugin}"
