--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -106,18 +106,16 @@
                                     </TextBlock>
                                 </DockPanel>
 
-                                <Grid DockPanel.Dock="Top" Margin="0,10,0,10" Background="Transparent">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="189.5" />
-                                        <ColumnDefinition Width="24.5" />
-                                        <ColumnDefinition Width="*" />
-                                    </Grid.ColumnDefinitions>
-                                    <Button Name="PART_ButtonPlayAction" Grid.Column="0"
+                                <DockPanel DockPanel.Dock="Top" Margin="0,10,0,10">
+                                    <Button Name="PART_ButtonPlayAction"
+                                            MinWidth="189.5"
                                             Height="45" Style="{DynamicResource PlayButton}" />
                                     <Button Name="PART_ButtonContextAction"
-                                            Height="45" Style="{DynamicResource ContextButton}" Grid.Column="0" />
+                                            MinWidth="189.5"
+                                            Height="45" Style="{DynamicResource ContextButton}" />
                                     <Button Name="PART_ButtonMoreActions"
-                                            Height="45" Margin="3.5,0,0,0" Grid.Column="1">
+                                            Width="24.5"
+                                            Height="45" Margin="3.5,0,0,0">
                                         <Button.Style>
                                             <Style TargetType="Button">
                                                 <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledBackgroundBrush}" />
@@ -154,10 +152,15 @@
                                             </Style>
                                         </Button.Style>
                                     </Button>
-                                    <Button x:Name="PART_ButtonEditGame" Grid.Column="2" HorizontalAlignment="Right" Padding="5"
-                                            Margin="10,0,5,0" Height="45" Focusable="False" VerticalAlignment="Top" Opacity="0.50"
-                                            Style="{DynamicResource GameEditButton}" FontFamily="{DynamicResource FontIcoFont}" />
-                                </Grid>
+                                    
+                                    <DockPanel DockPanel.Dock="Right" HorizontalAlignment="Right" LastChildFill="False" Grid.Column="2" VerticalAlignment="Center" Margin="20,0,5,0">
+                                        <Button x:Name="PART_ButtonEditGame" Focusable="False" Height="45" Width="32"
+                                                Style="{DynamicResource GameEditButton}" Margin="0,0,0,0"/>
+                                        <ToggleButton Name="GameFavoriteToggleButton" Margin="10,0,0,0" Focusable="False" Height="45" Width="32" Style="{DynamicResource PannelFavoriteToggleButton}"
+                                                      Visibility="{PluginStatus Plugin=felixkmh_Extras_Plugin}"
+                                                      IsChecked="{PluginSettings Plugin=ThemeExtras, Path=Game.Favorite, Mode=TwoWay, FallbackValue={StaticResource False}}"/>
+                                    </DockPanel>
+                                </DockPanel>
 
                                 <ScrollViewer DockPanel.Dock="Top" HorizontalAlignment="Stretch"
                                               HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto"
