--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -77,11 +77,16 @@
                                     </Border>
                                 </Grid>
                                 
-                                <DockPanel DockPanel.Dock="Top">
-                                    <Image Name="PART_ImageIcon" DockPanel.Dock="Left" MaxHeight="32" MaxWidth="32"
+                                <Grid DockPanel.Dock="Top">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+                                    <Image Name="PART_ImageIcon" Grid.Column="0" MaxHeight="32" MaxWidth="32"
                                            RenderOptions.BitmapScalingMode="Fant" Margin="0,0,10,0" />
                                     <TextBlock Name="PART_TextDisplayName" FontSize="{DynamicResource FontSizeLarger}"
-                                               TextWrapping="Wrap" DockPanel.Dock="Left"
+                                               TextWrapping="Wrap" Grid.Column="1" Margin="0,0,10,0"
                                                Tag="{DynamicResource GridViewDisplayGameNameIfLogoVisible}"
                                                VerticalAlignment="Center" Foreground="{DynamicResource TextBrush}">
                                         <TextBlock.Style>
@@ -104,7 +109,20 @@
                                             <DropShadowEffect ShadowDepth="3"/>
                                         </TextBlock.Effect>
                                     </TextBlock>
-                                </DockPanel>
+                                    <StackPanel Grid.Column="2" Orientation="Horizontal"
+                                                Margin="10,0,0,0" Style="{DynamicResource PluginStackpanelVisibility}"
+                                                Tag="{PluginSettings Plugin=NewsViewer, Path=PlayersCountAvailable, FallbackValue=False}">
+                                        <ContentControl x:Name="NewsViewer_PlayersInGameViewerControl"
+                                                        FontSize="{DynamicResource FontSizeSmall}"
+                                                        Foreground="{DynamicResource PlayersCountGridViewForegroundBrush}" />
+                                        <TextBlock Foreground="{DynamicResource PlayersCountGridViewForegroundBrush}"
+                                                   FontSize="{DynamicResource FontSizeSmall}" Padding="0"
+                                                   FontFamily="{DynamicResource FontFamily}"
+                                                   VerticalAlignment="Center" HorizontalAlignment="Left"
+                                                   Tag="{DynamicResource LOC_NewsViewer_PlayersInGameViewerControl_InGameCountLabel}"
+                                                   Text="{Binding Path=Tag, RelativeSource={RelativeSource Self}, StringFormat=' {0}'}"/>
+                                    </StackPanel>
+                                </Grid>
 
                                 <DockPanel DockPanel.Dock="Top" Margin="0,10,0,10">
                                     <Button Name="PART_ButtonPlayAction"
@@ -178,7 +196,7 @@
                                                 </Style>
                                                 <Style TargetType="Button" BasedOn="{StaticResource PropertyItemButton}" />
                                             </StackPanel.Resources>
-
+                                            
                                             <GridEx x:Name="GridEx" Margin="0,5,0,10"
                                                     ColumnCount="2" StarColumns="1"
                                                     RowCount="21" AutoLayoutColumns="2"
