--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -175,51 +175,12 @@
                                         <Border Padding="20,10,30,10" x:Name="HeaderRow" Background="{DynamicResource DetailsSectionBackgroundBrush}">
                                             <DockPanel>
                                                 <DockPanel HorizontalAlignment="Left"  VerticalAlignment="Center"
-                                                            Margin="0,0,10,0" DockPanel.Dock="Left">
-                                                    <Button Name="PART_ButtonPlayAction"
-                                                            MinWidth="189.5" Height="45" Style="{DynamicResource PlayButton}" />
-                                                    <Button Name="PART_ButtonContextAction" 
-                                                            MinWidth="189.5" Height="45" Style="{DynamicResource ContextButton}"/>
-                                                    <Button Name="PART_ButtonMoreActions" FontFamily="{DynamicResource FontIcoFont}"
-                                                            Width="24.5" Height="45" Margin="3.5,0,0,0">
-                                                        <Button.Style>
-                                                            <Style TargetType="Button">
-                                                                <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledBackgroundBrush}" />
-                                                                <Setter Property="Cursor" Value="Hand"/>
-                                                                <Setter Property="Template">
-                                                                    <Setter.Value>
-                                                                        <ControlTemplate TargetType="{x:Type Button}">
-                                                                            <Grid x:Name="Grid">
-                                                                                <Border x:Name="DefaultBorder" CornerRadius="0,2,2,0" Background="{TemplateBinding Background}"/>
-                                                                                <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0">
-                                                                                    <TextBlock x:Name="Icon" Text="&#xEA67;" FontFamily="{DynamicResource FontIcoFont}" FontSize="18"
-                                                                                               Foreground="{DynamicResource TextBrush}" VerticalAlignment="Center" Margin="0,0,0,0"/>
-                                                                                    <ContentPresenter RecognizesAccessKey="True" VerticalAlignment="Center"/>
-                                                                                </DockPanel>
-                                                                            </Grid>
-                                                                            <ControlTemplate.Triggers>
-                                                                                <DataTrigger Binding="{Binding ElementName=PART_ButtonPlayAction, Path=Visibility}" Value="Visible">
-                                                                                    <Setter Property="Background" Value="{DynamicResource PlayButtonBackgroundBrush}"/>
-                                                                                </DataTrigger>
-                                                                                <DataTrigger Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True">
-                                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledIsMouseOverBackgroundBrush}"/>
-                                                                                </DataTrigger>
-                                                                                <MultiDataTrigger>
-                                                                                    <MultiDataTrigger.Conditions>
-                                                                                        <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True"/>
-                                                                                        <Condition Binding="{Binding ElementName=PART_ButtonPlayAction, Path=Visibility}" Value="Visible"/>
-                                                                                    </MultiDataTrigger.Conditions>
-                                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonInstalledIsMouseOverBackgroundBrush}"/>
-                                                                                </MultiDataTrigger>
-                                                                            </ControlTemplate.Triggers>
-                                                                        </ControlTemplate>
-                                                                    </Setter.Value>
-                                                                </Setter>
-                                                            </Style>
-                                                        </Button.Style>
-                                                    </Button>
+                                                           Margin="0,0,10,0" DockPanel.Dock="Left">
+                                                    <Button Name="PART_ButtonPlayAction" Style="{DynamicResource PlayButton}" />
+                                                    <Button Name="PART_ButtonContextAction" Style="{DynamicResource ContextButton}" />
+                                                    <Button Name="PART_ButtonMoreActions" Style="{DynamicResource MoreActionsButton}"/>
                                                 </DockPanel>
-
+                                                
                                                 <DockPanel DockPanel.Dock="Right" VerticalAlignment="Center" Margin="20,0,0,0">
                                                     <Button x:Name="PART_ButtonEditGame" Focusable="False" Height="32" Width="32"
                                                             Style="{DynamicResource GameEditButton}" Margin="0,0,0,0"/>
