--- a/source/DefaultControls/Button.xaml
+++ b/source/DefaultControls/Button.xaml
@@ -293,9 +293,42 @@
             <Trigger Property="IsChecked" Value="False">
                 <Setter Property="Background" Value="Transparent" />
                 <Setter Property="Foreground" Value="#80ffffff" />
-                
+
             </Trigger>
         </Style.Triggers>
+    </Style>
+    
+    <Style TargetType="{x:Type Button}" x:Key="PlayersCountButtonStyle">
+        <Setter Property="Background" Value="{DynamicResource DetailsViewBannerPanelBackgroundBrush}"/>
+        <Setter Property="Foreground" Value="{DynamicResource PlayersCountDetailsViewForegroundBrush}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource DetailsViewBannerPanelBorderBrush}"/>
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="FontSize" Value="{DynamicResource FontSizeSmall}" />
+        <Setter Property="FontFamily" Value="{DynamicResource FontFamily}" />
+        <Setter Property="Cursor" Value="Hand" />
+        <Setter Property="Padding" Value="6,2,6,2" />
+        <Setter Property="Margin" Value="10,0,0,0" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}"
+                            Background="{TemplateBinding Background}" VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                            HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
+                            Margin="{TemplateBinding Margin}" Padding="{TemplateBinding Padding}">
+                        <StackPanel Orientation="Horizontal">
+                            <ContentPresenter VerticalAlignment="{TemplateBinding VerticalAlignment}" />
+                            <TextBlock Foreground="{TemplateBinding Foreground}"
+                                       FontSize="{TemplateBinding FontSize}"
+                                       VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                                       Tag="{DynamicResource LOC_NewsViewer_PlayersInGameViewerControl_InGameCountLabel}"
+                                       Text="{Binding Path=Tag, RelativeSource={RelativeSource Self}, StringFormat=' {0}'}"/>
+                        </StackPanel>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
     
 </ResourceDictionary>
