--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -122,10 +122,18 @@
                                     <Button Name="PART_ButtonPlayAction" Style="{DynamicResource PlayButton}" />
                                     <Button Name="PART_ButtonContextAction" Style="{DynamicResource ContextButton}" />
                                     <Button Name="PART_ButtonMoreActions" Style="{DynamicResource MoreActionsButton}"/>
-                                    
+
                                     <DockPanel DockPanel.Dock="Right" HorizontalAlignment="Right" LastChildFill="False" Grid.Column="2" VerticalAlignment="Center" Margin="20,0,5,0">
+                                        <ContentControl x:Name="PlayState_GameStateSwitchControl" Margin="10,0,0,0">
+                                            <ContentControl.Resources>
+                                                <Style TargetType="Button" BasedOn="{StaticResource DetailsSemiTransparentButton}" >
+                                                    <Setter Property="Width" Value="32" />
+                                                    <Setter Property="Height" Value="45" />
+                                                </Style>
+                                            </ContentControl.Resources>
+                                        </ContentControl>
                                         <Button x:Name="PART_ButtonEditGame" Focusable="False" Height="45" Width="32"
-                                                Style="{DynamicResource GameEditButton}" Margin="0,0,0,0"/>
+                                                Style="{StaticResource DetailsViewEditButton}" Margin="10,0,0,0"/>
                                         <ToggleButton Name="GameFavoriteToggleButton" Margin="10,0,0,0" Focusable="False" Height="45" Width="32" Style="{DynamicResource PannelFavoriteToggleButton}"
                                                       Visibility="{PluginStatus Plugin=felixkmh_Extras_Plugin}"
                                                       IsChecked="{PluginSettings Plugin=ThemeExtras, Path=Game.Favorite, Mode=TwoWay, FallbackValue={StaticResource False}}"/>
